# zenlist

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: main.js  zenmemo.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  icons.rs  main.rs  models.rs  storage.rs
storage/: bridge.js
styles/: main.css
