[package]
name = "zenlist"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
rfd = { version = "0.17", features = ["common-controls-v6"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon", "image-png"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
